Small bugfixes for overflow scrolling and spacing between lists

--- a/src/app/content-browser/content-browser.component.css
+++ b/src/app/content-browser/content-browser.component.css
@@ -14,7 +14,7 @@
 
 .list-content {
     width: 100%;
-    overflow: scroll;
+    overflow-x: auto;
 }
 
 @media only screen and (max-width: 410px) {
